force-app/main/default/objects/ZRH_DiccionarioConstantes__mdt/ZRH_DiccionarioConstantes__mdt.object-meta.xml
<CustomObject>
    <label>Diccionario de Constantes</label>
    <pluralLabel>Diccionario de Constantes</pluralLabel>
</CustomObject>