force-app/main/default/objects/ZRH_DiccionarioConstantes__mdt/fields/ZRH_Constante__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Constante__c</fullName>
    <label>Constante</label>
    <length>80</length>
    <type>Text</type>
</CustomField>