force-app/main/default/objects/ZRH_DiccionarioConstantes__mdt/fields/ZRH_Servicio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Servicio__c</fullName>
    <label>Servicio</label>
    <referenceTo>ZRH_RutaIntegracion__mdt</referenceTo>
    <relationshipLabel>Diccionario de Constantes</relationshipLabel>
    <relationshipName>DiccionarioConstantes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>