force-app/main/default/objects/ZRH_DiccionarioConstantes__mdt/fields/ZRH_Valor__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Valor__c</fullName>
    <label>Valor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>